# rusteng

./: Cargo.toml  LICENSE  README.md  build.rs
assets/: Fox_LICENSE.md
shaders/: draw_submit.slang  gpu_particles.slang  hiz.slang  main.slang  meshlet_submit.slang  particle_emit.slang  particle_render.slang  particle_simulate.slang  shader_struct.slang
src/: engine.rs  main.rs
src/engine/: object.rs  shader_struct.rs  vkutil.rs
