[package]
name = "foxy"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18.0"
winit = "0.30.5"
gltf = "1.4.1"
ash = { version = "0.38.0", features = ["linked"] }
ash-window = "0.13.0"
vk-mem = "0.5.0"
derivative = "2.2.0"
meshopt = "0.6.2"
zerocopy = "0.8.5"
zerocopy-derive = "0.8.5"
rspirv-reflect = "0.9.0"
rspirv = "0.12.0"

[[bin]]
name = "force-build"
path = "build.rs"
